--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,9 +4,14 @@ server:
 test:
   hello: HelloWorld1
 
+#Data Source Config
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     password: wiki
     url: jdbc:mysql://wiki@localhost/wiki?characterEncoding=UTF8&autoReconnect=true&serverTimezone=Asia/Shanghai&allowMultiQueries=true
     username: wiki
+
+#Mybatis scan all mapper.xml
+mybatis:
+  mapper-locations: classpath:/mapper/**/*.xml
