--- a/web/package.json
+++ b/web/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "vuex": "^4.0.0-0",
+    "dayjs": "^1.8.18"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.18.0",
