--- a/web/package.json
+++ b/web/package.json
@@ -8,11 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-
+    "ant-design-vue": "^2.0.0-rc.3",
+    "dayjs": "^1.8.18",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0",
-    "dayjs": "^1.8.18"
+    "vuex": "^4.0.0-0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.18.0",
