--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,3 +15,10 @@ spring:
 #Mybatis scan all mapper.xml
 mybatis:
   mapper-locations: classpath:/mapper/**/*.xml
+
+# 打印所有的sql日志：sql, 参数, 结果
+logging:
+  level:
+    com:
+      wikibase:
+        mapper: trace
